Bug 426406 - Minus sign is missing for negative numbers
Summary: Minus sign is missing for negative numbers
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Microsoft Windows Microsoft Windows
: NOR major
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 427590 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-09-11 13:06 UTC by Thomas Baumgart
Modified: 2020-10-19 07:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2020-09-11 13:06:41 UTC
SUMMARY
commit 6c283629a introduced retrieval of locale information on Windows but broke  the display of negative amounts on that platform.

STEPS TO REPRODUCE
1. Spot any location where you expect to see a negative number

OBSERVED RESULT
Number is shown without the minus sign

EXPECTED RESULT
Number is shown including the minus sign at the selected position according to your locale


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Thomas Baumgart 2020-09-11 13:11:06 UTC
Git commit 8ae9f44d8ecce5b5af9841e854e5547ea304523f by Thomas Baumgart.
Committed on 11/09/2020 at 13:10.
Pushed by tbaumgart into branch 'master'.

Fix retrieval of locale information on MS-Windows

Apparently, the locale information is only filled with a prior call to
setlocale() with some standard values.

M  +12   -2    kmymoney/misc/platformtools_nognu.cpp

https://invent.kde.org/office/kmymoney/commit/8ae9f44d8ecce5b5af9841e854e5547ea304523f
Comment 2 Thomas Baumgart 2020-09-11 15:00:14 UTC
Git commit 322d51c2889eba0bbe8c7f362831d6de5e0e2026 by Thomas Baumgart.
Committed on 11/09/2020 at 14:59.
Pushed by tbaumgart into branch '5.1'.

Fix retrieval of locale information on MS-Windows

Apparently, the locale information is only filled with a prior call to
setlocale() with some standard values.
FIXED-IN: 5.1.1

(cherry picked from commit 8ae9f44d8ecce5b5af9841e854e5547ea304523f)

M  +12   -2    kmymoney/misc/platformtools_nognu.cpp

https://invent.kde.org/office/kmymoney/commit/322d51c2889eba0bbe8c7f362831d6de5e0e2026
Comment 3 Thomas Baumgart 2020-10-12 15:10:06 UTC
*** Bug 427590 has been marked as a duplicate of this bug. ***
Comment 4 Thomas Baumgart 2020-10-19 07:30:19 UTC
*** Bug 427956 has been marked as a duplicate of this bug. ***