Fix retrieval of locale information on MS-Windows

Apparently, the locale information is only filled with a prior call to
setlocale() with some standard values.

BUG: 426406
FIXED-IN: 5.1.1

(cherry picked from commit 8ae9f44d8ecce5b5af9841e854e5547ea304523f)